# rsi-assistant

./: .prettierignore  LICENSE  README.md  build.ts  bunfig.toml  components.json  dev.ts  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
docs/: architecture.md
src/: App.css  App.test.tsx  App.tsx  output.css  persistence.test.tsx  setupTests.ts  testUtils.ts  types.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_test.rs  lib.rs  main.rs  stats.rs
src-tauri/src/idle/: mod.rs
src-tauri/src/timer/: mod.rs  tests.rs
src/components/: Statistics.test.tsx  Statistics.tsx  TimerDisplay.test.tsx  TimerDisplay.tsx
src/components/ui/: tabs.tsx
src/hooks/: useSettingsSync.ts  useTimer.test.ts  useTimer.ts
src/integration/: README.md  tauri-commands.test.ts
src/pages/: BreakOverlay.test.tsx  BreakOverlay.tsx  Exercises.test.tsx  Exercises.tsx  Settings.test.tsx  Settings.tsx  Statistics.tsx
src/styles/: calendar.css
