[package]
name = "rsi-assistant"
version = "0.1.0"
description = "A Tauri RSI Assistant"
authors = ["Anyul Rivas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rsi_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
device_query = "4.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tauri-plugin-notification = "2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

